--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,7 +16,7 @@
 <script language="javascript" src="jquery/jquery-ui.min.js" type="text/javascript"></script>
 <script language="javascript" src="jquery/jq.rolling.js" type="text/javascript"></script>
 <link rel="stylesheet" type="text/css" href="jq.rolling.css"/>
-
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
 </head>
 
@@ -24,18 +24,33 @@
 <header>
 <nav>
 <div class="logo">
-<img src="images/logo.png" alt="" id="logo" onclick="goToScroll('a')">
+<img src="images/llogo.gif" alt="" id="logo" onclick="goToScroll('a')">
 </div>
-<div class="menu">    
-<a href="#sec2" onclick="goToScroll('a')">PRODUCTS</a>
-<a href="#sec3" onclick="goToScroll('b')">MYPAGE</a>
-<a href="#profile" onclick="goToScroll('c')">MATCHING&BOARD</a>
+<div class="menu">
+
+<a href="#sec2" onclick="goToScroll('a')"
+class="menu-home-icon"><span class="material-symbols-outlined">
+other_houses메인
+</span>
+</a>
+
+<a href="#sec3" onclick="goToScroll('b')" class="menu-login-icon"><span class="material-symbols-outlined">
+manage_accounts로그인
+</span>
+</a>
+
+<a href="#profile" onclick="goToScroll('c')"
+class="menu-board-icon">
+<span class="material-symbols-outlined">
+space_dashboard게시판
+</span>
+</a>
 
 </div>
 </nav>
 </header>
-
-
+	<div class="side-left"></div>
+	<div class="side-right"></div>
 <!-- SECTION 0 PRODUCTS SLIDE START-->
 	<div class="a">
 <section class="sec0">
@@ -88,30 +103,27 @@
 
 </div>
 
+
 <div class="join">
-	<h1>
-		joinForm
-	</h1>
-	<!-- 중복체크와 로그인 할 아이디를 타입 이메일 형식으로 뱌. 막바지에 ㅅㄱ  -->
-	<!-- todolist -중복체크 연결. 메서드는 만들어둠 메서드 이름 memberIdCheck  -->
-	<form action="/member/join" method = "post">
-		<input type="text" placeholder="이메일" name="loginId" />
-		<label><button>중복체크</button></label>
+	<div class="join-wrapper">
+		<form action="/member/join" method = "post" id="join-form">
+		<div class="email">
+			<input type="text" placeholder="Email" name="loginId"/>
+		<label><button><p>중복체크</p></button></label>
+		</div>
+		<input type="text" placeholder="아이디" name="loginIdCheck" th:value="${idCheck}" readonly/>
+		<input type="password" placeholder="비밀번호" name="password">
+		<input type="text" placeholder="별명" name="nickname">
+		<input type="submit" value="join">
+		</form>
 
-		<input type="text" placeholder="회원님의 아이디" name="loginIdCheck" th:value="${idCheck}" readonly/>
-
-		<input type="password" placeholder="비밀번호"/ name="password">
-												 <!-- <input type="password" placeholder="비밀번호 확인"/ name="passwordCheck"> -->
-		<input type="text" placeholder="별명"/ name="nickname">
-		<input type="submit">
-	</form>
-
+	</div>
+</div>
 	<script type="text/javascript">
 
 
 	</script>
-</div>  
-</div>
+
 
 </section>
 </div>
@@ -184,6 +196,12 @@
 	</div>
 	<input type="submit">
 </div>
+	<div class="matching">
+
+
+		<button type="button" class="matching" id="matching">매칭하기</button>
+	</div>
+
 </section>
 </div>
 
@@ -195,11 +213,6 @@
 
 <!-- SECTION3 MATCHING START -->
 <section class="sec3">
-  <div class="matching">
-    
-
-<button type="button" class="matching" id="matching">매칭하기</button>
-</div>
 
 </section>
 <!-- SECTION3 MATCHING END -->
