--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -49,6 +49,7 @@ space_dashboard게시판
 </div>
 </nav>
 </header>
+바뀌었는지확인
 	<div class="side-left"></div>
 	<div class="side-right"></div>
 <!-- SECTION 0 PRODUCTS SLIDE START-->
