--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE  PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
