--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -21,6 +21,11 @@
 </head>
 
 <body>
+<div class="board-button">
+<button type="button" onclick="location.href='/board/list?category=recruit'">recruit임시</button>
+<button type="button" onclick="location.href='/board/list?category=apply'">apply임시</button>
+<button type="button" onclick="location.href='/board/list'">전체임시</button>
+</div>
 <header>
 <nav>
 <div class="logo">
@@ -48,8 +53,11 @@ space_dashboard게시판
 
 </div>
 </nav>
+
+
 </header>
-바뀌었는지확인
+
+
 	<div class="side-left"></div>
 	<div class="side-right"></div>
 <!-- SECTION 0 PRODUCTS SLIDE START-->
@@ -61,6 +69,7 @@ space_dashboard게시판
 			<li class="sp01"><img src="images/pepe1.gif" alt=""></li>
 			<li class="sp02"><img src="images/pepe2.gif" alt=""></li>
 			<li class="sp03"><img src="images/pepe3.gif" alt=""></li>
+			
 		</ul>
 	</div>
 <ul class="pages"></ul>
@@ -79,6 +88,7 @@ space_dashboard게시판
 
 
 <!-- SECTION 1 LOGIN,JOIN START -->
+
 <div class="b">
 <section class="sec1">
   <div class="mem">
